--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,42 +1,111 @@
-{% extends 'base.html.twig' %}
+{% extends 'base.html.twig' %} {% block title %}Log in!{% endblock %} {% block
+body %}
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+  crossorigin="anonymous"
+/>
 
-{% block title %}Log in!{% endblock %}
-
-{% block body %}
+<style>
+  .form-control {
+    display: block;
+    width: 30%;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  }
+</style>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myInput");
+    if (x.type === "password") {
+      x.type = "text";
+    } else {
+      x.type = "password";
+    }
+  }
+</script>
 <form method="post">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+  {% if error %}
+  <div class="alert alert-danger">
+    {{ error.messageKey|trans(error.messageData, 'security') }}
+  </div>
+  {% endif %} {% if app.user %}
+  <div class="mb-3">
+    You are logged in as {{ app.user.userIdentifier }},
+    <a href="{{ path('app_logout') }}">Logout</a>
+  </div>
+  {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
+  <h1
+    style="margin-left: 15px; margin-top: 15px"
+    class="h3 mb-3 font-weight-normal"
+  >
+    Login
+  </h1>
+  <label style="margin-left: 15px" for="inputEmail">Email</label>
+  <input
+    type="email"
+    value="{{ last_username }}"
+    name="email"
+    id="inputEmail"
+    class="form-control"
+    autocomplete="email"
+    required
+    autofocus
+    style="margin-left: 15px"
+  />
+  <label style="margin-left: 15px" for="inputPassword">Password</label>
+  <input
+    type="password"
+    name="password"
+    id="inputPassword"
+    class="form-control"
+    autocomplete="current-password"
+    required
+    style="margin-left: 15px"
+  />
+  <input
+    type="hidden"
+    name="_csrf_token"
+    value="{{ csrf_token('authenticate') }}"
+  />
+  {# Uncomment this section and add a remember_me option below your firewall to
+  activate remember me functionality. See
+  https://symfony.com/doc/current/security/remember_me.html
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputEmail">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
+  <div class="checkbox mb-3">
+    <label> <input type="checkbox" name="_remember_me" /> Remember me </label>
+  </div>
+  #}
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
-
-    {#
-        Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
-        See https://symfony.com/doc/current/security/remember_me.html
-
-        <div class="checkbox mb-3">
-            <label>
-                <input type="checkbox" name="_remember_me"> Remember me
-            </label>
-        </div>
-    #}
-
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
-    </button>
+  <button
+    class="btn btn-lg btn-primary"
+    type="submit"
+    style="margin-top: 15px; margin-left: 15px"
+  >
+    Login
+  </button>
 </form>
+<form action="/register">
+  <button
+    class="btn btn-lg btn-primary"
+    type="submit"
+    style="margin-top: 15px; margin-left: 15px"
+  >
+    Register
+  </button>
+</form>
+
 {% endblock %}
